--- a/fullstack Đối Tác QLBH/Frontend QLBH/css/ChiTietDonHang.css
+++ b/fullstack Đối Tác QLBH/Frontend QLBH/css/ChiTietDonHang.css
@@ -34,18 +34,20 @@ header{
 .vertical-center {
     width: 100%;
     margin: 0;
+    text-align: center;
     position: absolute;
     top: 50%;
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
 }
 
-#DonHang{
-    margin-right: 20%;
-    float: right;
+#KhachHang{
+    /* width: 20%; */
     border-radius: 100px;
     border: 1px solid black;
-    text-align: center;
+    /* display: flex; */
+    vertical-align: middle;
+    /* justify-content: center; */
     font-size: 20px;
     font-weight: bold;
     color:cornsilk;
@@ -54,8 +56,9 @@ header{
 }
 
 #CuaHang {
-    margin-left: 20%;
-    float: left;
+    /* margin-left: 20%; */
+    /* float: left; */
+    vertical-align: middle;
     font-size: 20px;
     border-radius: 100px;
     border: 1px solid black;
