Phúc 5th commit

--- a/fullstack Đối Tác QLBH/Frontend QLBH/css/ChiTietDonHang.css
+++ b/fullstack Đối Tác QLBH/Frontend QLBH/css/ChiTietDonHang.css
@@ -25,9 +25,9 @@ header{
     height: 80px;
     width: 100%;
     position: relative;
-    /* border-top: 3px solid burlywood;
-    border-bottom: 3px solid burlywood; */
-    /* margin: 0.5% 0; */
+    border-top: 3px solid burlywood;
+    border-bottom: 3px solid burlywood; 
+    margin: 0.5% 0;
     background-color:lavender;
 }
 
@@ -70,15 +70,16 @@ header{
     background-color: lightsalmon;
 }
 
-button {
+.button {
     font-size: 20px;
     border:none;
     padding: none;
     background-color:coral;
     color: white;
+    text-decoration: none;
 }
 
-button:hover{
+.button:hover{
     background-color:chocolate;
     cursor: pointer;
 }
@@ -100,7 +101,7 @@ main{
     justify-content: center;
 }
 
-.brand {
+.bill {
     display: flex;
     padding: 0 20px;
     gap: 20px;
@@ -108,7 +109,7 @@ main{
 
 }
 
-#branch{
+#detail{
     width: 100%;
     border: 3px solid black;
     padding: 0.5%;
@@ -133,19 +134,15 @@ table tr:nth-child(even){
     background-color:white;
 }
 
-table tr:nth-child(1){
+table th, tr:nth-child(1){
     background-color:skyblue;
     text-align: center;
 }
 
-/* tr:hover{
-    background-color: cornflowerblue;
-} */
-
 table{
     height: 90%;
     width: 100%;
-    margin: 1% 0;
+    /* margin: 1% 0; */
     border-collapse:collapse;
     text-align: center;
     vertical-align: middle;
