--- a/fullstack Đối Tác QLBH/Frontend QLBH/css/DanhSachCuaHang.css
+++ b/fullstack Đối Tác QLBH/Frontend QLBH/css/DanhSachCuaHang.css
@@ -27,6 +27,7 @@ header{
     position: relative;
     border-top: 3px solid burlywood;
     border-bottom: 3px solid burlywood;
+    /* background-color:lavender; */
     margin: 0.5% 0;
 }
 
