--- a/fullstack Đối Tác QLBH/Frontend QLBH/css/TheoDoiDonHang.css
+++ b/fullstack Đối Tác QLBH/Frontend QLBH/css/TheoDoiDonHang.css
@@ -96,7 +96,7 @@ main{
     justify-content: center;
 }
 
-.brand {
+.order {
     display: flex;
     padding: 0 20px;
     gap: 20px;
@@ -104,7 +104,7 @@ main{
 
 }
 
-#branch{
+#status{
     width: 100%;
     border: 3px solid black;
     padding: 0.5%;
@@ -129,7 +129,7 @@ table tr:nth-child(even){
     background-color:white;
 }
 
-table tr:nth-child(1){
+table th, tr:nth-child(1){
     background-color:skyblue;
     text-align: center;
 }
@@ -137,7 +137,7 @@ table tr:nth-child(1){
 table{
     height: 90%;
     width: 100%;
-    margin: 1% 0;
+    /* margin: 1% 0; */
     border-collapse:collapse;
     text-align: center;
     vertical-align: middle;
