--- a/fullstack Đối Tác QLBH/Frontend QLBH/css/DanhSachMonAn.css
+++ b/fullstack Đối Tác QLBH/Frontend QLBH/css/DanhSachMonAn.css
@@ -87,6 +87,18 @@ header{
     font-weight: bold;
 }
 
+#redirect:hover{
+    font-size: 20px;
+    border:none;
+    padding: none;
+    background-color:cornflowerblue;
+    color:lightpink;
+    padding: 0 1%;
+    margin: 0 0 0 0.5%;
+    text-decoration: none;
+    font-weight: bold;
+}
+
 #store {
     font-size: 20px;
     border:none;
@@ -147,9 +159,11 @@ main{
     color: white;
     padding: 0 3%;
     margin: 0 0 0 0.5%;
+    text-decoration: none;
 }
 
 #select:hover{
     background-color:maroon;
     cursor: pointer;
+    text-decoration: none;
 }
