--- a/fullstack Đối Tác QLBH/Frontend QLBH/css/TheoDoiDonHang.css
+++ b/fullstack Đối Tác QLBH/Frontend QLBH/css/TheoDoiDonHang.css
@@ -22,24 +22,24 @@ header{
 }
 
 .container {
-    height: 60px;
+    height: 80px;
     width: 100%;
     position: relative;
-    /* border-top: 3px solid burlywood;
-    border-bottom: 3px solid burlywood; */
-    /* margin: 0.5% 0; */
+    border-top: 3px solid burlywood;
+    border-bottom: 3px solid burlywood; 
+    margin: 0.5% 0;
     background-color:lavender;
 }
 
 .vertical-center {
     width: 100%;
     margin: 0;
+    text-align: center;
     position: absolute;
     top: 50%;
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
 }
-
 #DonHang{
     /* display: inline-block; */
     /* position: absolute; */
@@ -51,6 +51,20 @@ header{
     font-size: 20px;
     font-weight: bold;
     color:cornsilk;
+    background-color: lightsalmon;
+}
+
+#KhachHang{
+    /* width: 20%; */
+    border-radius: 100px;
+    border: 1px solid black;
+    /* display: flex; */
+    vertical-align: middle;
+    /* justify-content: center; */
+    font-size: 20px;
+    font-weight: bold;
+    color:cornsilk;
+    padding: 0.5% 3%;
     background-color: lightsalmon;
 }
 
